--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,16 +1,17 @@
 @import "../../node_modules/bootstrap/scss/functions";
-@import './utils/variables';
+@import "./utils/variables";
 @import "../../node_modules/bootstrap";
 
 @import "./base/reset";
 
 @import "./components/buttom";
 
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import "./layout/header";
+@import "./layout/footer";
 
 /*按鈕樣式*/
-@import './layout/button';
+@import "./layout/button";
 
-@import './pages/index.scss';
-@import "./pages/product.scss";
+@import "./pages/index";
+@import "./pages/product";
+@import "./pages/story";
