--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -156,6 +156,7 @@
   position: absolute;
   left: 24px;      
   bottom: 0;
+  pointer-events: none; /* 不阻擋點擊按鈕 */
 }
 .leaf3{
   position: absolute;
@@ -165,6 +166,7 @@
   max-width: 252px;
   height: auto;
   z-index: 3; 
+  pointer-events: none; /* 不阻擋點擊按鈕 */
 }
 /* 平板以下調整 */
 @media (max-width: 992px) {
