--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,45 @@
-<h1 class="header">header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<nav class="navbar navbar-expand-lg py-0">
+    <div class="container d-flex align-items-center">
+        <!-- Logo -->
+        <a class="navbar-brand py-4" href="index.html">
+        <img src="../assets/images/svg/logo_on light.svg" alt="logo">
+        </a>
+
+        <!-- 右側內容 -->
+        <div class="d-flex align-items-center ms-auto" id="navbarSupportedContent">
+        
+        <!-- 搜尋欄 -->
+        <div class="d-flex align-items-center border-bottom mx-6 my-5" style="max-width:154px;">
+            <input type="text" class="form-control border-0 shadow-none rounded-0 px-0 py-1"
+                placeholder="輸入商品名稱">
+            <span class="material-icons-outlined ms-2">search</span>
+        </div>
+
+        <!-- 導覽選單 -->
+        <ul class="navbar-nav d-flex align-items-center mb-0">
+            <li class="nav-item">
+            <a class="nav-link px-2 m-6 text-n-80" href="brand.html">品牌介紹</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link px-2 m-6 text-n-80" href="product.html">所有商品</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link p-2 m-6 text-n-80" href="product.html">
+                <span class="material-icons">shopping_cart</span>
+            </a>
+            </li>
+            <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn-pdark px-6 py-7" href="#" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                註冊 / 登入
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item py-6 px-10 text-center" href="#">個人資訊</a></li>
+                <li><a class="dropdown-item py-6 px-10 text-center" href="#">我的收藏</a></li>
+                <li><a class="dropdown-item py-6 px-10 text-center" href="#">查看訂單狀態</a></li>
+            </ul>
+            </li>
+        </ul>
+        </div>
+    </div>
+</nav>
