--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -53,7 +53,7 @@
                             
                         </li> -->
       <li class="nav-item d-none d-sm-none d-md-none d-lg-block">
-        <a class="nav-link text-t-m brand-text" href="story.html">品牌介紹</a>
+        <a class="nav-link text-t-m brand-text" href="brand.html">品牌介紹</a>
       </li>
       <li class="nav-item d-none d-sm-none d-md-none d-lg-block">
         <a class="nav-link text-t-m" href="product.html">所有商品</a>
