間距調整+header調整

--- a/assets/scss/pages/_brand.scss
+++ b/assets/scss/pages/_brand.scss
@@ -2,7 +2,7 @@
 
 .main-content-wrapper {
   position: relative; // 設定相對定位，作為絕對定位子元素的基準
-  background-image: url("../assets/images/bgc-img 02.png");
+  background-image: url("../assets/images/bgc-img02.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
