--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 @import "../../node_modules/bootstrap/scss/functions";
 @import "./utils/variables";
 @import "../../node_modules/bootstrap";
@@ -14,5 +15,4 @@
 
 @import "./pages/index";
 @import "./pages/product";
-@import "./pages/story";
 @import "./pages/brand";
