--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -2,7 +2,14 @@
   --Primary-100: #598e71;
   --Primary-dark: #1d6617;
   --Neutral-0: #ffffff;
+  --Neutral-20: #E8E8E8;
   --Neutral-40: #9d9d9d;
   --Neutral-60: #575757;
   --Neutral-80: #1e1e1e;
+  --Primary-100-15: #598E7126;
+  --Neutral-40-50: #9D9D9D80;
+  --Bgc-green: #F6F9EB;
+  --Azure-blue: #007FFF;
+  --Green: #00B900;
+  --Google-red: #EB4537;
 }
