--- a/assets/scss/layout/_button.scss
+++ b/assets/scss/layout/_button.scss
@@ -60,3 +60,22 @@
         padding: 8px 16px;
     }
 }
+
+.btn {
+    padding: 16px;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+
+.btn-dark {
+    background-color: var(--Primary-dark);
+    color: var(--Neutral-0);
+}
+
+.btn-light {
+    border: 1px solid var(--Primary-dark);
+}
