--- a/assets/scss/pages/_product-detail.scss
+++ b/assets/scss/pages/_product-detail.scss
@@ -1,13 +1,13 @@
 .border-b-neutral-20 {
-  border-bottom: 1px solid var(--neutral-20);
+  border-bottom: 1px solid var(--Neutral-20);
 }
 
 .border-b-neutral-40 {
-  border-bottom: 1px solid var(--neutral-40);
+  border-bottom: 1px solid var(--Neutral-40);
 }
 
 .border-b-dark {
-  border-bottom: 2px solid var(--primary-dark);
+  border-bottom: 2px solid var(--Primary-dark);
 }
 
 .product-row {
@@ -34,7 +34,7 @@
   justify-content: space-between;
   gap: 8px;
   width: 38%;
-  border: 1px solid var(--neutral-40);
+  border: 1px solid var(--Neutral-40);
 }
 
 @media (max-width: 768px) {
@@ -86,43 +86,43 @@
 
 .product-info-title {
   font-weight: 700;
-  color: var(--neutral-80);
+  color: var(--Neutral-80);
 }
 
 .product-info-item {
-  color: var(--neutral-600);
+  color: var(--Neutral-60);
 }
 
 .btn-product-size {
-  border: 1px solid var(--neutral-40-50);
+  border: 1px solid var(--Neutral-40-50);
   width: 86px;
 }
 
 .btn-product-size.active,
 .btn-product-size:hover {
-  border-color: var(--primary-100);
-  background-color: var(--primary-100-15);
-  color: var(--primary-dark);
+  border-color: var(--Primary-100);
+  background-color: var(--Primary-100-15);
+  color: var(--Primary-dark);
 }
 
 .tab-item {
   flex: 1;
   text-align: center;
   padding-bottom: 17px;
-  border-bottom: 1px solid var(--neutral-40);
-  color: var(--neutral-40);
+  border-bottom: 1px solid var(--Neutral-40);
+  color: var(--Neutral-40);
   font-weight: 700;
   cursor: pointer;
 }
 
 .tab-item.active {
-  color: var(--primary-dark);
-  border-bottom: 2px solid var(--primary-dark);
+  color: var(--Primary-dark);
+  border-bottom: 2px solid var(--Primary-dark);
 }
 
 .tab-item:hover {
-  color: var(--primary-dark);
-  border-bottom: 2px solid var(--primary-dark);
+  color: var(--Primary-dark);
+  border-bottom: 2px solid var(--Primary-dark);
 }
 
 .lstd {
