更新 product 頁面與 header 下方陰影

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,6 +10,10 @@
 
 @import "./components/buttom";
 
+@import "./helpers/utils";
+
+@import "./helpers/variables";
+
 @import "./layout/header";
 
 @import "./layout/footer";
