--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg py-0">
-  <div class="container d-flex align-items-center">
+<nav class="navbar navbar-expand-lg py-0 shadow-sm">
+  <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
       <img src="../assets/images/svg/logo_on light.svg" alt="logo">
