首頁手機板修改+增加標題字型

--- a/assets/scss/helpers/_utils-2.scss
+++ b/assets/scss/helpers/_utils-2.scss
@@ -158,18 +158,21 @@
     font-size: 40px;
     line-height: 1.2;
     font-weight: 700;
+    font-family: 'Noto Serif TC', serif;
 }
 
 .h2 {
     font-size: 32px;
     line-height: 1.2;
     font-weight: 700;
+    font-family: 'Noto Serif TC', serif;
 }
 
 .h3 {
     font-size: 28px;
     line-height: 1.2;
     font-weight: 700;
+    font-family: 'Noto Serif TC', serif;
 }
 
 .h4 {
